--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,36 @@ main{
 }
 header{
     display: flex;
+    justify-content: space-between;
 }
-.navb{
+.navl{
     height: 50px;
+    text-decoration: none;
+    font-size: 1rem;
+
 }
 body{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    font-family: 'Roboto', sans-serif;
+}
+.hide{
+    display: none;
+}
+.show{
+    display: block;
+}
+nav :hover{
+    text-decoration: underline;
+}
+html {
+    scroll-behavior: smooth;
+}
+@media screen and (max-width: 759px) {
+    img {
+        max-width: 100%;
+        height: auto;
+      }      
+    nav{
+        display: flex;
+        flex-direction: column;
+    }
 }
