--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 main{
     line-height: 160%;
     max-width: 100ch;
+    margin-bottom: 0;
+    margin-left: 10px;
 }
 header{
     display: flex;
     justify-content: space-between;
+    background-color: lightgray;
 }
 .navl{
     height: 50px;
@@ -14,6 +17,10 @@ header{
 }
 body{
     font-family: 'Roboto', sans-serif;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
 }
 .hide{
     display: none;
@@ -26,6 +33,19 @@ nav :hover{
 }
 html {
     scroll-behavior: smooth;
+}
+footer{
+    background-color: grey;
+    width: 100%;
+    margin-bottom: 0;
+    margin-left: 0;
+}
+nav{
+    display: flex;
+    flex-direction: none;
+}
+nav a{
+    padding: 1rem;
 }
 @media screen and (max-width: 759px) {
     img {
